tests/expectations/parser-expression/unreachable/equality_and_order_expression.out
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_0:1:1
     |
   1 | if 10 ; {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_1:1:1
     |
   1 | if 10 . {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_2:1:1
     |
   1 | if 10 import {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_3:1:1
     |
   1 | if 10 , {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_4:1:1
     |
   1 | if 10 * {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_5:1:1
     |
   1 | if 10 + {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_6:1:1
     |
   1 | if 10 - {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_7:1:1
     |
   1 | if 10 / {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_8:1:1
     |
   1 | if 10 [ {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_9:1:1
     |
   1 | if 10 ] {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_10:1:1
     |
   1 | if 10 { {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_11:1:1
     |
   1 | if 10 } {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_12:1:1
     |
   1 | if 10 ( {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_13:1:1
     |
   1 | if 10 ) {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_14:1:1
     |
   1 | if 10 : {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_15:1:1
     |
   1 | if 10 :: {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_16:1:1
     |
   1 | if 10 ? {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_17:1:1
     |
   1 | if 10 _ {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_18:1:1
     |
   1 | if 10 = {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_19:1:1
     |
   1 | if 10 == {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_20:1:1
     |
   1 | if 10 ! {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_21:1:1
     |
   1 | if 10 != {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_22:1:1
     |
   1 | if 10 > {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_23:1:1
     |
   1 | if 10 >= {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_24:1:1
     |
   1 | if 10 < {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_25:1:1
     |
   1 | if 10 <= {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_26:1:1
     |
   1 | if 10 > {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_27:1:1
     |
   1 | if 10 .. {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_28:1:1
     |
   1 | if 10 as {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_29:1:1
     |
   1 | if 10 const {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_30:1:1
     |
   1 | if 10 let {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_31:1:1
     |
   1 | if 10 for {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_32:1:1
     |
   1 | if 10 if {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_33:1:1
     |
   1 | if 10 else {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_34:1:1
     |
   1 | if 10 i8 {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_35:1:1
     |
   1 | if 10 i16 {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_36:1:1
     |
   1 | if 10 i32 {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_37:1:1
     |
   1 | if 10 i64 {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_38:1:1
     |
   1 | if 10 i128 {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_39:1:1
     |
   1 | if 10 u8 {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_40:1:1
     |
   1 | if 10 u16 {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_41:1:1
     |
   1 | if 10 u32 {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_42:1:1
     |
   1 | if 10 u64 {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_43:1:1
     |
   1 | if 10 u128 {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_44:1:1
     |
   1 | if 10 & {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_45:1:1
     |
   1 | if 10 return {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_46:1:1
     |
   1 | if 10 self {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_47:1:1
     |
   1 | if 10 Self {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_48:1:1
     |
   1 | if 10 true {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_49:1:1
     |
   1 | if 10 false {}
     | ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'if'
    --> test_50:1:1
     |
   1 | if 10 0 {}
     | ^^
